ISIS-2445: try build local staging repo (4)

--- a/.github/workflows/ci-build-artifacts-no-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-no-push-maven.yml
@@ -3,7 +3,7 @@ name: Build, Test (JDK 18)
 on:
   push:
     branches:
-      - master
+      - masterNOOP
   pull_request:
     branches:
       - master
