--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -479,6 +479,22 @@
 				</repository>
 			</distributionManagement>
 		</profile>
+		
+		<profile>
+			<id>lsrepo</id>
+			<activation>
+				<property>
+					<name>lsrepo</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+			        <id>local.staging.repo</id> 
+			        <name>Temporary Local Filesystem Staging Repository</name> 
+			        <url>file://${project.build.directory}/mvn-artifact</url> 
+			    </repository> 
+			</distributionManagement>
+		</profile>
 
 	</profiles>
 </project>
