ISIS-2445: try build local staging repo (5)

--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1125,6 +1125,37 @@ under the License.
 			        <url>file://${project.build.directory}/mvn-artifact</url> 
 			    </repository> 
 			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+					    <groupId>com.github.github</groupId>
+					    <artifactId>site-maven-plugin</artifactId>
+					    <version>0.12</version>
+					    <configuration>
+					        <message>Maven artifacts for ${project.version}</message>
+					        <noJekyll>true</noJekyll>
+					        <outputDirectory>${project.build.directory}</outputDirectory>
+					        <branch>refs/heads/master</branch>
+					        <includes>
+					            <include>**/*</include>
+					        </includes>
+					        <merge>true</merge>
+					        <repositoryName>apache</repositoryName>
+					        <repositoryOwner>isis</repositoryOwner>
+					        <server>github</server>
+					    </configuration>
+					    <executions>
+					        <execution>
+					            <goals>
+					                <goal>site</goal>
+					            </goals>
+					            <phase>deploy</phase>
+					        </execution>
+					    </executions>
+					</plugin>
+				</plugins>
+			</build>
+			
 		</profile>
 
 		<!-- APACHE ISIS customisation 15/15: end -->
