--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -81,7 +81,7 @@ jobs:
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
       run: >-
-         mvn deploy
+         mvn install
          -f isis-parent/pom.xml
          -Dreleased
          -Dlsrepo
