--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -14,7 +14,7 @@ jobs:
       # to be shared among all steps of this job
       PROJECT_ROOT_PATH: ${{ github.workspace }}
       CI_SCRIPTS_PATH: ${{ github.workspace }}/scripts/ci
-      LOCAL_FS_REPO_PATH: ${{ github.workspace }}/mvn-artifact
+      NIGHTLY_LFS_REPO_PATH: ${{ github.workspace }}/mvn-artifact
 
       # not used, would be nice if we could transform the TIMESTAMP string into the REVISION
       # variable here, but it seems github not yet has any string expression manipulation
@@ -81,21 +81,35 @@ jobs:
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
       run: >-
-         mvn install
+         mvn deploy
          -f isis-parent/pom.xml
          -Dreleased
-         -Dlsrepo
+         -Dnightly-stage1
          -Denforcer.failFast=true
          -Djacoco.skip=true
          -Dmaven.source.skip=true
          -Dskip.git
          -Dskip.arch
          -DskipTests
-         -DaltReleaseDeploymentRepository=local.staging.repo::default::file://${LOCAL_FS_REPO_PATH}
          -T1C
 
-    - name: Verify (List) Local Artifacts
-      run: 'ls -al ${LOCAL_FS_REPO_PATH}'
+    - name: Deploy from Local Filesystem to Github
+        # -Dreleased ... build only the released modules
+        # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
+        # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
+        # -T 1C ... 1 build thread per core
+      run: >-
+         mvn deploy
+         -f isis-parent/pom.xml
+         -Dreleased
+         -Dnightly-stage2
+         -Denforcer.failFast=true
+         -Djacoco.skip=true
+         -Dmaven.source.skip=true
+         -Dskip.git
+         -Dskip.arch
+         -DskipTests
+         -T1C
 
 #   - name: Build Artifacts (Github March 2022)
 #     run: 'bash scripts/ci/build-artifacts.sh'
