--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1112,10 +1112,10 @@ under the License.
 		</profile>
 		
 		<profile>
-			<id>lsrepo</id>
+			<id>nightly-stage1</id>
 			<activation>
 				<property>
-					<name>lsrepo</name>
+					<name>nightly-stage1</name>
 				</property>
 			</activation>
 			<distributionManagement>
@@ -1124,6 +1124,35 @@ under the License.
 			        <name>Temporary Local Filesystem Staging Repository</name> 
 			        <url>file://${project.build.directory}/mvn-artifact</url> 
 			    </repository> 
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+					    <artifactId>maven-deploy-plugin</artifactId>
+					    <version>2.8.2</version>
+					    <configuration>
+					        <altDeploymentRepository>
+					            local.staging.repo::default::file://${project.build.directory}/mvn-artifact
+					        </altDeploymentRepository>
+					    </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
+		<profile>
+			<id>nightly-stage2</id>
+			<activation>
+				<property>
+					<name>nightly-stage2</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>Github Releases</name>
+					<url>https://maven.pkg.github.com/apache/isis</url>
+				</repository>
 			</distributionManagement>
 			<build>
 				<plugins>
@@ -1157,6 +1186,8 @@ under the License.
 			</build>
 			
 		</profile>
+		
+		
 
 		<!-- APACHE ISIS customisation 15/15: end -->
 	</profiles>
