--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -481,10 +481,10 @@
 		</profile>
 		
 		<profile>
-			<id>lsrepo</id>
+			<id>nightly-stage1</id>
 			<activation>
 				<property>
-					<name>lsrepo</name>
+					<name>nightly-stage1</name>
 				</property>
 			</activation>
 			<distributionManagement>
@@ -494,6 +494,66 @@
 			        <url>file://${project.build.directory}/mvn-artifact</url> 
 			    </repository> 
 			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+					    <artifactId>maven-deploy-plugin</artifactId>
+					    <version>2.8.2</version>
+					    <configuration>
+					        <altDeploymentRepository>
+					            local.staging.repo::default::file://${project.build.directory}/mvn-artifact
+					        </altDeploymentRepository>
+					    </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
+		<profile>
+			<id>nightly-stage2</id>
+			<activation>
+				<property>
+					<name>nightly-stage2</name>
+				</property>
+			</activation>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>Github Releases</name>
+					<url>https://maven.pkg.github.com/apache/isis</url>
+				</repository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+					    <groupId>com.github.github</groupId>
+					    <artifactId>site-maven-plugin</artifactId>
+					    <version>0.12</version>
+					    <configuration>
+					        <message>Maven artifacts for ${project.version}</message>
+					        <noJekyll>true</noJekyll>
+					        <outputDirectory>${project.build.directory}</outputDirectory>
+					        <branch>refs/heads/master</branch>
+					        <includes>
+					            <include>**/*</include>
+					        </includes>
+					        <merge>true</merge>
+					        <repositoryName>apache</repositoryName>
+					        <repositoryOwner>isis</repositoryOwner>
+					        <server>github</server>
+					    </configuration>
+					    <executions>
+					        <execution>
+					            <goals>
+					                <goal>site</goal>
+					            </goals>
+					            <phase>deploy</phase>
+					        </execution>
+					    </executions>
+					</plugin>
+				</plugins>
+			</build>
+			
 		</profile>
 
 	</profiles>
