--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -76,22 +76,20 @@ jobs:
 #        release_name: Release ${{ env.REVISION }}
 
     - name: Build Artifacts and Deploy to Local Filesystem
+      run: 'bash scripts/ci/build-artifacts.sh'
+      env:
         # -Dreleased ... build only the released modules
         # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
-      run: >-
-         mvn deploy
-         -f isis-parent/pom.xml
-         -Dreleased
-         -Dnightly-stage1
-         -Denforcer.failFast=true
-         -Djacoco.skip=true
-         -Dmaven.source.skip=true
-         -Dskip.git
-         -Dskip.arch
-         -DskipTests
-         -T1C
+        MVN_ADDITIONAL_OPTS: >-
+          -f isis-parent/pom.xml
+          -Dreleased
+          -Dnightly-stage1
+          -Denforcer.failFast=true
+          -Djacoco.skip=true
+          -Dmaven.source.skip=true
+        MVN_STAGES: deploy
 
     - name: Deploy from Local Filesystem to Github
         # -Dreleased ... build only the released modules
@@ -110,6 +108,8 @@ jobs:
          -Dskip.arch
          -DskipTests
          -T1C
+#not yet      env:
+#        GITHUB_TOKEN: ${{ github.token }}
 
 #   - name: Build Artifacts (Github March 2022)
 #     run: 'bash scripts/ci/build-artifacts.sh'
