--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -94,19 +94,22 @@ jobs:
          -T1C
 
     - name: Deploy from Local Filesystem to Github
-      run: 'bash scripts/ci/build-artifacts.sh'
-      env:
         # -Dreleased ... build only the released modules
         # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
-        MVN_ADDITIONAL_OPTS: >-
-          -f isis-parent/pom.xml
-          -Dreleased
-          -Dnightly-stage2
-          -Denforcer.failFast=true
-          -Djacoco.skip=true
-        MVN_STAGES: deploy
+      run: >-
+        mvn deploy
+        -f isis-parent/pom.xml
+        -Dreleased
+        -Dnightly-stage2
+        -Denforcer.failFast=true
+        -Djacoco.skip=true
+        -Dmaven.source.skip=true
+        -Dskip.git
+        -Dskip.arch
+        -DskipTests
+      env:
         GITHUB_TOKEN: ${{ github.token }}
 
 #   - name: Build Artifacts (Github March 2022)
