--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -14,7 +14,6 @@ jobs:
       # to be shared among all steps of this job
       PROJECT_ROOT_PATH: ${{ github.workspace }}
       CI_SCRIPTS_PATH: ${{ github.workspace }}/scripts/ci
-      NIGHTLY_LFS_REPO_PATH: ${{ github.workspace }}/mvn-artifact
 
       # not used, would be nice if we could transform the TIMESTAMP string into the REVISION
       # variable here, but it seems github not yet has any string expression manipulation
@@ -76,22 +75,20 @@ jobs:
 #        release_name: Release ${{ env.REVISION }}
 
     - name: Build Artifacts and Deploy to Local Filesystem
+      run: 'bash scripts/ci/build-artifacts.sh'
+      env:
         # -Dreleased ... build only the released modules
         # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
-      run: >-
-         mvn deploy
-         -f isis-parent/pom.xml
-         -Dreleased
-         -Dnightly-stage1
-         -Denforcer.failFast=true
-         -Djacoco.skip=true
-         -Dmaven.source.skip=true
-         -Dskip.git
-         -Dskip.arch
-         -DskipTests
-         -T1C
+        MVN_ADDITIONAL_OPTS: >-
+          -f isis-parent/pom.xml
+          -Dreleased
+          -Dnightly-stage1
+          -Denforcer.failFast=true
+          -Djacoco.skip=true
+        MVN_STAGES: deploy
+        REV_REVERT_FLAG: off
 
     - name: Deploy from Local Filesystem to Github
         # -Dreleased ... build only the released modules
@@ -103,14 +100,14 @@ jobs:
         -f isis-parent/pom.xml
         -Dreleased
         -Dnightly-stage2
-        -Denforcer.failFast=true
+        -Denforcer.skip=true
         -Djacoco.skip=true
         -Dmaven.source.skip=true
         -Dskip.git
         -Dskip.arch
         -DskipTests
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+#     env:
+#       GITHUB_TOKEN: ${{ github.token }}
 
 #   - name: Build Artifacts (Github March 2022)
 #     run: 'bash scripts/ci/build-artifacts.sh'
