--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -2,9 +2,9 @@ name: Apache Isis Nightly Build
 
 on:
   workflow_dispatch:
-  schedule:
+  #schedule:
     ## daily 02:00 (UTC) in the morning
-    - cron: '0 2 * * *'
+    #- cron: '0 2 * * *'
 
 jobs:
   build:
@@ -74,7 +74,7 @@ jobs:
 #        tag_name: ${{ env.REVISION }}
 #        release_name: Release ${{ env.REVISION }}
 
-    - name: Build Artifacts and Deploy to Local Filesystem
+    - name: Build Artifacts (Github March 2022)
       run: 'bash scripts/ci/build-artifacts.sh'
       env:
         # -Dreleased ... build only the released modules
@@ -84,49 +84,13 @@ jobs:
         MVN_ADDITIONAL_OPTS: >-
           -f isis-parent/pom.xml
           -Dreleased
-          -Dnightly-stage1
+          -Dgithub
           -Denforcer.failFast=true
           -Djacoco.skip=true
-        MVN_STAGES: deploy
-        REV_REVERT_FLAG: off
-
-    - name: Deploy from Local Filesystem to Github
-        # -Dreleased ... build only the released modules
-        # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
-        # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
-        # -T 1C ... 1 build thread per core
-      run: >-
-        mvn deploy
-        -s $PROJECT_ROOT_PATH/.m2/settings.xml
-        -f isis-parent/pom.xml
-        -Dreleased
-        -Dnightly-stage2
-        -Denforcer.skip=true
-        -Djacoco.skip=true
-        -Dmaven.source.skip=true
-        -Dskip.git
-        -Dskip.arch
-        -DskipTests
-      env:
+          -DinstallAtEnd=true -DdeployAtEnd=true
         GITHUB_TOKEN: ${{ github.token }}
-
-#   - name: Build Artifacts (Github March 2022)
-#     run: 'bash scripts/ci/build-artifacts.sh'
-#     env:
-#       # -Dreleased ... build only the released modules
-#       # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
-#       # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
-#       # -T 1C ... 1 build thread per core
-#       MVN_ADDITIONAL_OPTS: >-
-#         -f isis-parent/pom.xml
-#         -Dreleased
-#         -Dgithub
-#         -Denforcer.failFast=true
-#         -Djacoco.skip=true
-#         -DinstallAtEnd=true -DdeployAtEnd=true
-#       GITHUB_TOKEN: ${{ github.token }}
-#       MVN_STAGES: deploy
-#       SOURCE_MODE: attach
+        MVN_STAGES: deploy
+        SOURCE_MODE: attach
 
 
 # FOR DEBUG USE
