--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1169,8 +1169,8 @@ under the License.
 					            <include>**/*</include>
 					        </includes>
 					        <merge>true</merge>
-					        <repositoryName>apache</repositoryName>
-					        <repositoryOwner>isis</repositoryOwner>
+					        <repositoryName>apache-isis-committers</repositoryName>
+					        <repositoryOwner>isis-nightly</repositoryOwner>
 					        <server>github</server>
 					    </configuration>
 					    <executions>
