--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -516,13 +516,6 @@
 					<name>nightly-stage2</name>
 				</property>
 			</activation>
-			<distributionManagement>
-				<repository>
-					<id>github</id>
-					<name>Github Releases</name>
-					<url>https://maven.pkg.github.com/apache/isis</url>
-				</repository>
-			</distributionManagement>
 			<build>
 				<plugins>
 					<plugin>
@@ -547,7 +540,7 @@
 					            <goals>
 					                <goal>site</goal>
 					            </goals>
-					            <phase>deploy</phase>
+					            <phase>site</phase>
 					        </execution>
 					    </executions>
 					</plugin>
