--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -516,6 +516,13 @@
 					<name>nightly-stage2</name>
 				</property>
 			</activation>
+			<distributionManagement>
+				<repository>
+			        <id>local.staging.repo</id> 
+			        <name>Temporary Local Filesystem Staging Repository</name> 
+			        <url>file://${project.build.directory}/mvn-artifact</url> 
+			    </repository> 
+			</distributionManagement>
 			<build>
 				<plugins>
 					<plugin>
