--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1112,17 +1112,17 @@ under the License.
 		</profile>
 		
 		<profile>
-			<id>nightly-stage1</id>
+			<id>nightly-localfs-repo</id>
 			<activation>
 				<property>
-					<name>nightly-stage1</name>
+					<name>nightly-localfs-repo</name>
 				</property>
 			</activation>
 			<distributionManagement>
 				<repository>
-			        <id>local.staging.repo</id> 
+			        <id>nightly-localfs-repo</id> 
 			        <name>Temporary Local Filesystem Staging Repository</name> 
-			        <url>file://${project.build.directory}/mvn-artifact</url> 
+			        <url>file://${NIGHTLY_ROOT_PATH}/docs/mvn-snapshots</url> 
 			    </repository> 
 			</distributionManagement>
 			<build>
@@ -1132,59 +1132,12 @@ under the License.
 					    <version>2.8.2</version>
 					    <configuration>
 					        <altDeploymentRepository>
-					            local.staging.repo::default::file://${project.build.directory}/mvn-artifact
+					            nightly-localfs-repo::default::file://${NIGHTLY_ROOT_PATH}/docs/mvn-snapshots
 					        </altDeploymentRepository>
 					    </configuration>
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
-		
-		<profile>
-			<id>nightly-stage2</id>
-			<activation>
-				<property>
-					<name>nightly-stage2</name>
-				</property>
-			</activation>
-			<distributionManagement>
-				<repository>
-			        <id>local.staging.repo</id> 
-			        <name>Temporary Local Filesystem Staging Repository</name> 
-			        <url>file://${project.build.directory}/mvn-artifact</url> 
-			    </repository> 
-			</distributionManagement>
-			<build>
-				<plugins>
-					<plugin>
-					    <groupId>com.github.github</groupId>
-					    <artifactId>site-maven-plugin</artifactId>
-					    <version>0.12</version>
-					    <configuration>
-					        <message>Maven artifacts for ${project.version}</message>
-					        <noJekyll>true</noJekyll>
-					        <outputDirectory>${project.build.directory}</outputDirectory>
-					        <branch>refs/heads/master</branch>
-					        <includes>
-					            <include>**/*</include>
-					        </includes>
-					        <merge>true</merge>
-					        <repositoryName>apache-isis-committers</repositoryName>
-					        <repositoryOwner>isis-nightly</repositoryOwner>
-					        <server>github</server>
-					    </configuration>
-					    <executions>
-					        <execution>
-					            <goals>
-					                <goal>site</goal>
-					            </goals>
-					            <phase>site</phase>
-					        </execution>
-					    </executions>
-					</plugin>
-				</plugins>
-			</build>
-			
 		</profile>
 		
 		
