--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -491,7 +491,7 @@
 				<repository>
 			        <id>nightly-localfs-repo</id> 
 			        <name>Temporary Local Filesystem Staging Repository</name> 
-			        <url>file://${NIGHTLY_ROOT_PATH}/docs/mvn-snapshots</url> 
+			        <url>file://${NIGHTLY_ROOT_PATH}/mvn-snapshots</url> 
 			    </repository> 
 			</distributionManagement>
 			<build>
@@ -501,7 +501,7 @@
 					    <version>2.8.2</version>
 					    <configuration>
 					        <altDeploymentRepository>
-					            nightly-localfs-repo::default::file://${NIGHTLY_ROOT_PATH}/docs/mvn-snapshots
+					            nightly-localfs-repo::default::file://${NIGHTLY_ROOT_PATH}/mvn-snapshots
 					        </altDeploymentRepository>
 					    </configuration>
 					</plugin>
