--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -77,17 +77,18 @@ jobs:
     - name: Build Artifacts (Github March 2022)
       run: 'bash scripts/ci/build-artifacts.sh'
       env:
-        # -Dreleased ... build only the released modules
+        # -Dmodule-all ... build all released modules
         # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
         # -Djacoco.skip=true ... no need for the CI build to add test coverage reports
         # -T 1C ... 1 build thread per core
         MVN_ADDITIONAL_OPTS: >-
           -f isis-parent/pom.xml
-          -Dreleased
+          -Dmodule-all
           -Dgithub
           -Denforcer.failFast=true
           -Djacoco.skip=true
-          -DinstallAtEnd=true -DdeployAtEnd=true
+          -DinstallAtEnd=true
+          -DdeployAtEnd=true
         GITHUB_TOKEN: ${{ github.token }}
         MVN_STAGES: deploy
         SOURCE_MODE: attach
