Revert "ISIS-2445: purge 'released' profile"
This reverts commit 0706a3a6e0ccc000a8b851ce622f7e6ba18fa992.

--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1050,6 +1050,24 @@ under the License.
 		</profile>
 
 		<!-- APACHE ISIS customisation 15/15: start -->
+		<profile>
+			<id>released</id>
+			<activation>
+				<property>
+					<name>released</name>
+				</property>
+			</activation>
+			<modules>
+				<module>../core</module>
+				<module>../extensions</module>
+				<module>../mappings</module>
+				<module>../mavendeps</module>
+				<module>../starters</module>
+				<module>../subdomains</module>
+				<module>../testing</module>
+				<module>../valuetypes</module>
+			</modules>
+		</profile>
 
 		<profile>
 			<id>sources</id>
