ISIS-2445: use separate env var for nightly-localfs-repo
- MVN_SNAPSHOTS_PATH

--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1104,7 +1104,7 @@ under the License.
 				<repository>
 			        <id>nightly-localfs-repo</id> 
 			        <name>Temporary Local Filesystem Staging Repository</name> 
-			        <url>file://${NIGHTLY_ROOT_PATH}/mvn-snapshots</url> 
+			        <url>file://${MVN_SNAPSHOTS_PATH}</url> 
 			    </repository> 
 			</distributionManagement>
 			<build>
@@ -1114,7 +1114,7 @@ under the License.
 					    <version>2.8.2</version>
 					    <configuration>
 					        <altDeploymentRepository>
-					            nightly-localfs-repo::default::file://${NIGHTLY_ROOT_PATH}/mvn-snapshots
+					            nightly-localfs-repo::default::file://${MVN_SNAPSHOTS_PATH}
 					        </altDeploymentRepository>
 					    </configuration>
 					</plugin>
