--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -74,6 +74,11 @@
         </dependency>
 
 		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
 		</dependency>
