--- a/subdomains/docx/applib/pom.xml
+++ b/subdomains/docx/applib/pom.xml
@@ -35,6 +35,12 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>org.apache.isis.commons</groupId>
+			<artifactId>isis-commons</artifactId>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.apache.isis.core</groupId>
 			<artifactId>isis-applib</artifactId>
@@ -57,11 +63,6 @@
 					<artifactId>jcl-over-slf4j</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom2</artifactId>
 		</dependency>
 
 		<dependency>
