--- a/examples/demo/vaadin/pom.xml
+++ b/examples/demo/vaadin/pom.xml
@@ -181,7 +181,7 @@
 						<artifactId>jib-maven-plugin</artifactId>
 						<configuration>
 							<from>
-								<image>openjdk:17-alpine</image>
+								<image>openjdk:18-jdk-slim-bullseye</image>
 							</from>
 							<container>
 								<jvmFlags>
