--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,7 @@
 				<module>examples/demo/wicket/jdo</module>
 				<module>examples/demo/wicket/jpa</module>
 				<!-- prerequisites ... -->
+				<module>examples/demo/domain</module>
 				<module>examples/demo/web</module>
 			</modules>
 		</profile>
@@ -208,6 +209,7 @@
 				<module>examples/demo/vaadin</module>
 				<!-- prerequisites ... -->
 				<module>incubator/viewers/vaadin</module>
+				<module>examples/demo/domain</module>
 				<module>examples/demo/web</module>
 				<module>examples/demo/wicket/common</module>
 				<module>examples/demo/wicket/jdo</module>
