--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -366,6 +366,21 @@ under the License.
 	 -->
 
 	<build>
+		<extensions>
+			<!-- scp and sftp support for deployments. -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>3.5.1</version>
+			</extension>
+			<!-- ftp support for deployments. -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>3.5.1</version>
+			</extension>
+		</extensions>
+
 		<pluginManagement>
 			<plugins>
             <!-- set versions of common plugins for reproducibility, ordered alphabetically -->
@@ -397,7 +412,7 @@ under the License.
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.8.2</version>
+					<version>3.0.0-M2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -1092,7 +1107,7 @@ under the License.
 				</repository>
 			</distributionManagement>
 		</profile>
-		
+
 		<profile>
 			<id>nightly-localfs-repo</id>
 			<activation>
@@ -1102,17 +1117,17 @@ under the License.
 			</activation>
 			<repositories>
 		        <repository>
-			        <id>nightly-localfs-repo</id> 
-			        <name>Temporary Local Filesystem Staging Repository</name> 
-			        <url>file://${MVN_SNAPSHOTS_PATH}</url> 
+			        <id>nightly-localfs-repo</id>
+			        <name>Temporary Local Filesystem Staging Repository</name>
+			        <url>file://${MVN_SNAPSHOTS_PATH}</url>
 			    </repository>
     		</repositories>
 			<distributionManagement>
 				<repository>
-			        <id>nightly-localfs-repo</id> 
-			        <name>Temporary Local Filesystem Staging Repository</name> 
-			        <url>file://${MVN_SNAPSHOTS_PATH}</url> 
-			    </repository> 
+			        <id>nightly-localfs-repo</id>
+			        <name>Temporary Local Filesystem Staging Repository</name>
+			        <url>file://${MVN_SNAPSHOTS_PATH}</url>
+			    </repository>
 			</distributionManagement>
 			<build>
 				<plugins>
@@ -1128,8 +1143,8 @@ under the License.
 				</plugins>
 			</build>
 		</profile>
-		
-		
+
+
 
 		<!-- APACHE ISIS customisation 15/15: end -->
 	</profiles>
