--- a/examples/demo/pom.xml
+++ b/examples/demo/pom.xml
@@ -212,11 +212,6 @@
 			<groupId>org.apache.isis.extensions</groupId>
 			<artifactId>isis-extensions-secman-shiro-realm</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.isis.incubator.clients</groupId>
-			<artifactId>isis-client-kroviz</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
 
 		<!-- OTHER DEPENDENCIES -->
 
@@ -238,7 +233,7 @@
 			<id>module-all</id>
 			<activation>
 				<property>
-					<name>!module-all-except-incubator</name>
+					<name>module-all</name>
 				</property>
 			</activation>
 			<modules>
