--- a/pom.xml
+++ b/pom.xml
@@ -174,9 +174,10 @@
 				</property>
 			</activation>
 			<modules>
-				<module>examples/demo/javafx</module>
 				<!-- prerequisites ... -->
 				<module>incubator/viewers/javafx</module>
+				
+				<module>examples/demo/javafx</module>
 			</modules>
 		</profile>
 
@@ -188,12 +189,14 @@
 				</property>
 			</activation>
 			<modules>
+				<!-- prerequisites ... -->
+				<module>examples/demo</module>
+				<module>examples/demo/domain</module>
+				<module>examples/demo/web</module>
+				
 				<module>examples/demo/wicket/common</module>
 				<module>examples/demo/wicket/jdo</module>
 				<module>examples/demo/wicket/jpa</module>
-				<!-- prerequisites ... -->
-				<module>examples/demo/domain</module>
-				<module>examples/demo/web</module>
 			</modules>
 		</profile>
 
@@ -206,13 +209,14 @@
 				</property>
 			</activation>
 			<modules>
-				<module>examples/demo/vaadin</module>
 				<!-- prerequisites ... -->
 				<module>incubator/viewers/vaadin</module>
 				<module>examples/demo/domain</module>
 				<module>examples/demo/web</module>
 				<module>examples/demo/wicket/common</module>
 				<module>examples/demo/wicket/jdo</module>
+				
+				<module>examples/demo/vaadin</module>
 			</modules>
 		</profile>
 
@@ -276,9 +280,10 @@
 				</property>
 			</activation>
 			<modules>
-				<module>regressiontests</module>
 				<!-- prerequisites ... -->
 				<module>tooling</module>
+			
+				<module>regressiontests</module>
 			</modules>
 		</profile>
 
