ISIS-2998: updates the 'github' profile to reference the released modules
there was a problem that -f parent/pom.xml doesn't define any modules unless called with -Dapache-release.  But we don't want an ASF release, but something akin to relesae up to guthub

--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1099,6 +1099,16 @@ under the License.
 					<name>github</name>
 				</property>
 			</activation>
+			<modules>
+				<module>../core</module>
+				<module>../extensions</module>
+				<module>../mappings</module>
+				<module>../mavendeps</module>
+				<module>../starters</module>
+				<module>../subdomains</module>
+				<module>../testing</module>
+				<module>../valuetypes</module>
+			</modules>
 			<distributionManagement>
 				<repository>
 					<id>github</id>
