--- a/supplemental-model/pom.xml
+++ b/supplemental-model/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
-	license agreements. See the NOTICE file distributed with this work for additional 
-	information regarding copyright ownership. The ASF licenses this file to 
-	you under the Apache License, Version 2.0 (the "License"); you may not use 
-	this file except in compliance with the License. You may obtain a copy of 
-	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-	by applicable law or agreed to in writing, software distributed under the 
-	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-	OF ANY KIND, either express or implied. See the License for the specific 
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor
+	license agreements. See the NOTICE file distributed with this work for additional
+	information regarding copyright ownership. The ASF licenses this file to
+	you under the Apache License, Version 2.0 (the "License"); you may not use
+	this file except in compliance with the License. You may obtain a copy of
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
+	by applicable law or agreed to in writing, software distributed under the
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
+	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -20,13 +20,13 @@
 
 	<name>Apache Isis Supplemental - Legal Info</name>
 	<description>
-  	For example, the templates used by many Apache distributions assemble a listing of project dependencies 
-  	according to their organization name (and URL), along with the URL each project's website. When dependency 
-  	POMs are missing this information, the dependency notice file that the Remote Resources Plugin renders can 
+  	For example, the templates used by many Apache distributions assemble a listing of project dependencies
+  	according to their organization name (and URL), along with the URL each project's website. When dependency
+  	POMs are missing this information, the dependency notice file that the Remote Resources Plugin renders can
   	be invalid.
 	To compensate for incomplete dependency POMs, we use the supplemental models support.
   	</description>
-  	
+
   	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -46,7 +46,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
+				<version>3.0.0-M2</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
