--- a/extensions/vw/exceldownload/ui/pom.xml
+++ b/extensions/vw/exceldownload/ui/pom.xml
@@ -38,9 +38,9 @@
 		<plugins>
 			<plugin>
 				<!-- can be removed, once isis-viewer-wicket-ui does no longer need this switch -->
-				<!-- overrides defaults as configured in our core pom, 
+				<!-- overrides defaults as configured in our core pom,
         			to make javadoc failures non fatal and let the build continue;
-        			this we can set on a per module basis, to apply only to those, 
+        			this we can set on a per module basis, to apply only to those,
         			we don't know how to fix otherwise -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -52,19 +52,46 @@
 	</build>
 
     <dependencies>
-    
+
         <dependency>
             <groupId>org.apache.isis.viewer</groupId>
             <artifactId>isis-viewer-wicket-ui</artifactId>
         </dependency>
-        
-    	<dependency>
-            <groupId>org.apache.isis.subdomains</groupId>
-        	<artifactId>isis-subdomains-poi</artifactId>
-        	<type>pom</type>
-        	<version>${project.version}</version>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.woodstox</groupId>
+                    <artifactId>woodstox-core</artifactId>
+                </exclusion>
+                <!-- circumventing convergence issues since maven-enforcer-plugin.version=3.0.0 -->
+                <exclusion>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-utils</artifactId>
+                </exclusion>
+                <!-- circumventing convergence issues since maven-enforcer-plugin.version=3.0.0 -->
+                <exclusion>
+                    <groupId>org.osgi</groupId>
+                    <artifactId>org.osgi.core</artifactId>
+                </exclusion>
+                <!-- already provided via spring-boot-log4j2 -->
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-lite</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
