--- a/subdomains/excel/applib/pom.xml
+++ b/subdomains/excel/applib/pom.xml
@@ -32,7 +32,7 @@
             <groupId>org.apache.isis.core</groupId>
             <artifactId>isis-applib</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.isis.persistence</groupId>
             <artifactId>isis-persistence-jdo-applib</artifactId>
@@ -46,9 +46,37 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.isis.subdomains</groupId>
-        	<artifactId>isis-subdomains-poi</artifactId>
-        	<type>pom</type>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.woodstox</groupId>
+                    <artifactId>woodstox-core</artifactId>
+                </exclusion>
+                <!-- circumventing convergence issues since maven-enforcer-plugin.version=3.0.0 -->
+                <exclusion>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-utils</artifactId>
+                </exclusion>
+                <!-- circumventing convergence issues since maven-enforcer-plugin.version=3.0.0 -->
+                <exclusion>
+                    <groupId>org.osgi</groupId>
+                    <artifactId>org.osgi.core</artifactId>
+                </exclusion>
+                <!-- already provided via spring-boot-log4j2 -->
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-lite</artifactId>
         </dependency>
 
         <!-- test -->
