ISIS-2445: make sure we don't break surefire when jacoco is active

--- a/isis-parent/pom.xml
+++ b/isis-parent/pom.xml
@@ -1145,6 +1145,9 @@ under the License.
 					<name>jacoco-report-xml</name>
 				</property>
 			</activation>
+			<properties>
+				<surefire-plugin.argLine>@{argLine} -Xms512m -Xmx512m</surefire-plugin.argLine>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
