ISIS-2445: rename artifact isis-parent -> isis-bom
- as this is the Bill of Material

--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -81,7 +81,7 @@ jobs:
         # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
         # -T 1C ... 1 build thread per core
         MVN_ADDITIONAL_OPTS: >-
-          -f isis-parent/pom.xml
+          -f bom/pom.xml
           -Dgithub
           -Denforcer.failFast=true
           -DinstallAtEnd=true -DdeployAtEnd=true
