--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -50,7 +50,7 @@ under the License.
 	</parent>
 
 	<groupId>org.apache.isis</groupId>
-	<artifactId>isis-parent</artifactId>
+	<artifactId>isis-bom</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -73,7 +73,10 @@ under the License.
 
 	<!-- APACHE ISIS customisation 2/15: start -->
 	<name>Apache Isis</name>
-	<description>Parent for the core framework + extensions, starter parent pom for starter apps.</description>
+	<description>
+		Apache Isis Bill of Material (BOM).
+		Als the parent POM for the core framework + extensions, starter parent pom for starter apps.
+	</description>
 
     <url>https://isis.apache.org</url>
 	<inceptionYear>2010</inceptionYear>
