--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,9 +16,9 @@
 
 	<parent>
 		<groupId>org.apache.isis</groupId>
-		<artifactId>isis-parent</artifactId>
+		<artifactId>isis-bom</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../isis-parent/pom.xml</relativePath>
+		<relativePath>../bom/pom.xml</relativePath>
 	</parent>
 
 	<groupId>org.apache.isis.core</groupId>
@@ -171,7 +171,7 @@
 		<shiro.version>1.9.0</shiro.version>
 		<simpleslackapi.version>1.3.0</simpleslackapi.version>
 		<slf4j-api.version>1.7.36</slf4j-api.version> <!-- also provided by spring-boot-starter-logging, needed to solve convergence issues -->
-		<spring-boot.version>2.6.6</spring-boot.version> <!-- has no effect here, needs to be set in isis-parent/pom.xml -->
+		<spring-boot.version>2.6.6</spring-boot.version> <!-- has no effect here, needs to be set in bom/pom.xml -->
 		<summernote.version>0.8.11</summernote.version>
 		<swagger-core.version>1.6.5</swagger-core.version>
 
