--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	<description>
         Convenience aggregator POM that references all modules, some explicitely,
         others via profiles, that are not activiated per default.
-        The parent POM of the core framework is isis-parent/pom.xml.
+        The parent POM of the core framework is bom/pom.xml.
     </description>
 
     <properties>
@@ -61,7 +61,7 @@
                 also keep profiles in sync with the site documentation
                 https://github.com/apache/isis/blob/master/antora/components/conguide/modules/ROOT/pages/building-apache-isis.adoc
                     -->
-                <module>parent</module>
+                <module>bom</module>
 				<module>core</module>
 				<module>extensions</module>
 				<module>mappings</module>
@@ -84,7 +84,7 @@
 				</property>
 			</activation>
 			<modules>
-				<module>parent</module>
+				<module>bom</module>
 				<module>core</module>
 				<module>extensions</module>
 				<module>mappings</module>
