--- a/tooling/pom.xml
+++ b/tooling/pom.xml
@@ -16,9 +16,9 @@
 
 	<parent>
 		<groupId>org.apache.isis</groupId>
-		<artifactId>isis-parent</artifactId>
+		<artifactId>isis-bom</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../isis-parent/pom.xml</relativePath>
+		<relativePath>../bom/pom.xml</relativePath>
 	</parent>
 
 	<groupId>org.apache.isis.tooling</groupId>
