ISIS-2445: switch DataNucleus plugin repo to SSL

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -195,7 +195,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>DataNucleus_2</id>
-			<url>http://www.datanucleus.org/downloads/maven2/</url> <!--TODO not yet supports SSL, even required? -->
+			<url>https://www.datanucleus.org/downloads/maven2/</url> 
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
