ISIS-3000: update deps on reg. tests

--- a/regressiontests/pom.xml
+++ b/regressiontests/pom.xml
@@ -211,8 +211,8 @@
 			</dependency>
 			
 			<dependency>
-				<groupId>org.apache.isis.mappings</groupId>
-				<artifactId>isis-mappings-restclient-applib</artifactId>
+				<groupId>org.apache.isis.viewer</groupId>
+				<artifactId>isis-viewer-restfulobjects-client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			
