--- a/regressiontests/stable-rest/pom.xml
+++ b/regressiontests/stable-rest/pom.xml
@@ -46,8 +46,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.mappings</groupId>
-			<artifactId>isis-mappings-restclient-applib</artifactId>
+			<groupId>org.apache.isis.viewer</groupId>
+			<artifactId>isis-viewer-restfulobjects-client</artifactId>
 			<scope>test</scope>
 		</dependency>
 
