--- a/incubator/viewers/vaadin/pom.xml
+++ b/incubator/viewers/vaadin/pom.xml
@@ -32,6 +32,7 @@
 	<properties>
 		<jar-plugin.automaticModuleName>org.apache.isis.incubator.viewer.vaadin</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/isis/incubator/viewer/vaadin</git-plugin.propertiesDir>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<packaging>pom</packaging>
