--- a/tooling/javamodel/pom.xml
+++ b/tooling/javamodel/pom.xml
@@ -31,6 +31,7 @@
 		<code-assert.version>0.9.14</code-assert.version>
 		<javaparser.version>3.24.2</javaparser.version>
 		<skipTests>true</skipTests>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<repositories>
